apps/eightbitsaxlounge/prod/db-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: eightbitsaxlounge-db-service
  namespace: eightbitsaxlounge-prod
  labels:
    app: eightbitsaxlounge
    component: db
spec:
  selector:
    app: eightbitsaxlounge
    component: db
  ports:
    - port: 5984
      targetPort: 5984
