apps/eightbitsaxlounge/prod/overlay-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: eightbitsaxlounge-overlay-service
  namespace: eightbitsaxlounge-prod
  labels:
    app: eightbitsaxlounge
    component: overlay
spec:
  selector:
    app: eightbitsaxlounge
    component: overlay
  ports:
    - port: 80
      targetPort: 3000
